--- a/product.css
+++ b/product.css
@@ -34,7 +34,7 @@ body {
     position: fixed;
     width: 42%;
     height: 90vh; /* Slightly reduced height */
-    top: 4vh; /* Centers vertically with 5% space top/bottom */
+    top: 5vh; /* Centers vertically with 5% space top/bottom */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -62,6 +62,7 @@ body {
     flex: 1;
     margin-right: 40%;
     padding: 7vh 5vw;
+    padding-top: 6vh;
     overflow-y: auto;
     height: 100vh;
 }
