--- a/product.css
+++ b/product.css
@@ -235,6 +235,15 @@ ul li {
     background-color: #c62828;
 }
 
+.add-another button {
+    font-size: 14px;
+    background-color: #0078ff;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
 
 /* Mobile Styles */
 @media (max-width: 768px) {
