--- a/product.css
+++ b/product.css
@@ -19,6 +19,10 @@ body {
     text-align: right;
 }
 
+.mobile-header {
+    display: none;
+}
+
 /* Main Container */
 .product-container {
     display: flex;
@@ -387,5 +391,32 @@ ul li {
 
     ul li {
         margin-right: 10px;
+    }
+
+    .mobile-header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 15px 10px;
+        background: linear-gradient(to left, purple, #0078ff);
+        text-align: center;
+    }
+
+    .mobile-logo {
+        width: 80px;
+        height: auto;
+        margin-bottom: 10px;
+    }
+
+    .contact-info {
+        color: white;
+        font-size: 16px;
+        font-weight: bold;
+    }
+
+    .contact-info a {
+        color: white;
+        text-decoration: underline;
+        font-weight: bold;
     }
 }
